Feat: Cambio de nombre de app

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,9 +26,9 @@
 </head>
 <body>
     <nav>
-        <a href="{{ url_for('index') }}">FlaskApp</a>
+        <a href="{{ url_for('index') }}">Librería</a>
         <a href="#">About</a>
-    </nav>
+    </nav>git
     <hr>
     <div class="content">
         {% block content %} {% endblock %}
