Feat: Elimiar la palabra git que se agrego por error

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     <nav>
         <a href="{{ url_for('index') }}">Librería</a>
         <a href="#">About</a>
-    </nav>git
+    </nav>
     <hr>
     <div class="content">
         {% block content %} {% endblock %}
